<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="@dimen/dimen_150dp"
              android:textSize="@dimen/font_30sp"
              android:text="@string/txt_login"
              android:id="@+id/tv_title"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/til_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <EditText android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/et_username"
                  android:hint="@string/txt_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_username"
            app:passwordToggleEnabled="true"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp">

        <EditText android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:inputType="textPassword"
                  android:hint="@string/txt_password"
                  android:id="@+id/et_password"
        />
    </android.support.design.widget.TextInputLayout>

    <Button android:layout_width="wrap_content"
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/txt_login_no_caps"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password"/>
    <TextView android:layout_width="@dimen/dimen_0dp"
              android:layout_height="wrap_content"
              android:id="@+id/tv_register"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/btn_login"
              android:textAlignment="center"
              android:text="@string/txt_don_t_have_an_account_sign_up"
              android:layout_marginTop="@dimen/dimen_10dp"/>
</android.support.constraint.ConstraintLayout>