<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimen_50dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/til_username">

        <EditText android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/et_username"
                  android:hint="@string/txt_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_email"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_username"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp">

        <EditText android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:inputType="textEmailAddress"
                  android:hint="@string/txt_email"
                  android:id="@+id/et_email"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_20dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/et_phone"
                android:hint="@string/txt_phone_number"
                android:inputType="phone"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_phone"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:passwordToggleEnabled="true"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp">

        <EditText android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:inputType="textPassword"
                  android:hint="@string/txt_password"
                  android:id="@+id/et_password"
        />
    </android.support.design.widget.TextInputLayout>


    <Button android:layout_width="@dimen/dimen_0dp"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:id="@+id/btn_register"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password"/>

</android.support.constraint.ConstraintLayout>