<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <include
            android:id="@+id/toolbar_layout"
            layout="@layout/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <ScrollView android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/sv_item"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar_layout">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="@dimen/dimen_0dp"
                    android:id="@+id/cl_image"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="#0f4ec2">

                <ImageView
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="@dimen/dimen_150dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:id="@+id/iv_detil"
                        app:layout_constraintTop_toTopOf="parent"
                />
                <android.support.constraint.ConstraintLayout android:layout_width="@dimen/dimen_0dp"
                                                             android:layout_height="wrap_content"
                                                             app:layout_constraintLeft_toLeftOf="parent"
                                                             app:layout_constraintRight_toRightOf="parent"
                                                             app:layout_constraintBottom_toBottomOf="@id/iv_detil"
                                                             android:background="#f5c71f">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              app:layout_constraintLeft_toLeftOf="parent"
                              app:layout_constraintTop_toTopOf="parent"
                              android:text="@string/txt_jumlah_tiket"
                              android:id="@+id/tv_jumlah_tiket"
                              android:layout_marginTop="@dimen/dimen_20dp"
                              android:layout_marginBottom="@dimen/dimen_10dp"
                              android:textSize="@dimen/font_18sp"
                              app:layout_constraintBottom_toBottomOf="parent"
                              android:layout_marginLeft="@dimen/dimen_24dp"
                              android:layout_marginRight="@dimen/dimen_24dp"/>

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/tv_content_tiket"
                              app:layout_constraintLeft_toLeftOf="parent"
                              app:layout_constraintTop_toBottomOf="@id/tv_jumlah_tiket"
                              android:layout_marginLeft="@dimen/dimen_80dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              app:layout_constraintRight_toRightOf="parent"
                              android:layout_marginTop="@dimen/dimen_20dp"
                              android:layout_marginRight="@dimen/dimen_24dp"
                              app:layout_constraintTop_toTopOf="parent"
                              android:text="@string/txt_id_transaksi"
                              android:id="@+id/tv_id_transaksi"
                              android:layout_marginBottom="@dimen/dimen_10dp"
                              app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              app:layout_constraintRight_toRightOf="parent"
                              app:layout_constraintTop_toBottomOf="@id/tv_id_transaksi"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/cl_image"
                      android:layout_marginTop="@dimen/dimen_24dp"
                      android:layout_marginLeft="@dimen/dimen_24dp"
                      android:id="@+id/tv_penyelenggara"
                      android:text="@string/txt_penyelenggara"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_waktu"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_penyelenggara"
                      android:layout_marginLeft="@dimen/dimen_24dp"
                      android:layout_marginTop="@dimen/dimen_20dp"
                      android:text="@string/txt_waktu_event"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_harga"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_waktu"
                      android:layout_marginLeft="@dimen/dimen_24dp"
                      android:text="@string/txt_harga_tiket"
                      android:layout_marginTop="@dimen/dimen_20dp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_sisa"
                      android:layout_marginLeft="@dimen/dimen_24dp"
                      android:layout_marginTop="@dimen/dimen_20dp"
                      app:layout_constraintTop_toBottomOf="@id/tv_harga"
                      app:layout_constraintLeft_toLeftOf="parent"
                      android:text="@string/txt_sisa_tiket"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/dimen_24dp"
                      app:layout_constraintTop_toBottomOf="@id/tv_sisa"
                      android:layout_marginTop="@dimen/dimen_20dp"
                      app:layout_constraintLeft_toLeftOf="parent"
                      android:id="@+id/tv_lokasi"
                      android:text="@string/txt_lokasi"/>
            <TextView android:layout_width="@dimen/dimen_0dp"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/dimen_24dp"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintLeft_toRightOf="@id/tv_penyelenggara"
                      app:layout_constraintTop_toBottomOf="@id/cl_image"
                      android:layout_marginTop="@dimen/dimen_24dp"
                      android:layout_marginRight="@dimen/dimen_24dp"
                      tools:text="Tetetetetetetetete"
                      android:id="@+id/tv_content_penyelenggara"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_content_penyelenggara"
                      android:layout_marginTop="@dimen/dimen_20dp"
                      android:layout_marginRight="@dimen/dimen_24dp"
                      android:id="@+id/tv_content_waktu"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/dimen_20dp"
                      android:layout_marginRight="@dimen/dimen_24dp"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_content_waktu"
                      android:id="@+id/tv_content_harga"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintRight_toRightOf="parent"
                      android:layout_marginTop="@dimen/dimen_20dp"
                      android:layout_marginRight="@dimen/dimen_24dp"
                      android:id="@+id/tv_content_sisa_tiket"
                      app:layout_constraintTop_toBottomOf="@+id/tv_content_harga"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_content_lokasi"
                      android:layout_marginLeft="@dimen/dimen_24dp"
                      android:textAlignment="textEnd"
                      app:layout_constraintLeft_toRightOf="@id/tv_lokasi"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_content_sisa_tiket"
                      android:layout_marginTop="@dimen/dimen_20dp"
                      android:layout_marginRight="@dimen/dimen_24dp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_content_contact"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_content_lokasi"
                      android:layout_marginTop="@dimen/dimen_24dp"
                      android:layout_marginRight="@dimen/dimen_24dp"/>
            <ImageView android:layout_width="@dimen/dimen_24dp"
                       android:layout_height="@dimen/dimen_24dp"
                       app:layout_constraintTop_toBottomOf="@id/tv_lokasi"
                       android:layout_marginTop="60dp"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:srcCompat="@drawable/ic_3d_rotation_black_24dp"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>